Fix overlap of language switcher text in RTL layout
Fixes https://phabricator.wikimedia.org/T152446

--- a/app/assets/stylesheets/modules/_uls.styl
+++ b/app/assets/stylesheets/modules/_uls.styl
@@ -1,18 +1,19 @@
-.uls-trigger 
+.uls-trigger
   position relative
-  top -2px 
-  margin-left 0px 
+  top -2px
+  margin-left 0px
+  /*@noflip*/ padding-left: 30px
 
 .uls-menu
-  margin-top 10px 
+  margin-top 10px
   input[type=text]
     height auto
-    
+
 .uls-menu .uls-lcd-region-section .uls-lcd-region-title
   font-weight normal
-  
+
 .uls-search-label
   height 27px
-  
+
 .uls-filterinput
-  padding-top 3px 
+  padding-top 3px
